--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "aqa-advanced",
   "version": "1.0.0",
@@ -5,12 +6,24 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "prepare": "husky",
+    "lint": "npx eslint --fix ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "axios": "^1.7.5",
+    "chalk": "^5.3.0",
+    "fs": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "globals": "^15.9.0",
+    "@eslint/js": "^9.9.0",
+    "eslint": "^9.9.0",
+    "jest": "^29.7.0",
+    "prettier": "3.3.3",
+    "typescript-eslint": "^8.2.0"
   }
 }
