--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "aqa-advanced",
   "version": "1.0.0",
@@ -19,9 +18,10 @@
     "fs": "^0.0.1-security"
   },
   "devDependencies": {
-    "globals": "^15.9.0",
     "@eslint/js": "^9.9.0",
+    "cypress": "^13.15.0",
     "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "prettier": "3.3.3",
     "typescript-eslint": "^8.2.0"
